--- a/ccs/carousel.css
+++ b/ccs/carousel.css
@@ -48,7 +48,8 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 3rem 0;
+  color: orange;
 }
 
 /* Thin out the marketing headings */
